Updated files - Removed Alina Style - Added Modern Style - Remove color for render (from Alina Style) - Added new value on player:   - ping: show your ping on MultiPlayer - InterfaceUtils.getResourceLocation now static